--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="stylesheet" href="./styles/themes.css" />
     <link rel="icon" type="image/svg+xml" href="./svg/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
     <link rel="apple-touch-icon" href="./images/apple-touch-icon.png" />
     <script src="./scripts/set-theme.js"></script>
   </head>
@@ -55,7 +56,7 @@
             <div class="card__container">
               <img
                 class="card__img card__img-filter-brightness"
-                src="./images/fashionable-confident-cat-wearin.jpg"
+                src="./images/peter-herrmann-4Hf98JYfURU-unsplash.jpg"
                 loading="lazy"
                 alt=""
               />
@@ -68,8 +69,8 @@
                 подумать, как новые знания могут повлиять на ваше будущее.
               </p>
               <p class="card__text">
-                Каждая картинка описывает меня на данном этапе обучения.
-                Чувствую себя вполне уверенно.
+                Погружение во что-то новое. Всегда интересно что из этого
+                выйдет.
               </p>
             </div>
             <div class="card__buttons">
@@ -118,7 +119,7 @@
             <div class="card__container">
               <img
                 class="card__img card__img-filter-contrast"
-                src="./images/83e5e56d451911ee874ebaea8797b5f2.jpg"
+                src="./images/neom-_5TOw0ED9Jk-unsplash.jpg"
                 loading="lazy"
                 alt=""
               />
@@ -134,8 +135,8 @@
                 я не справлюсь?
               </p>
               <p class="card__text">
-                Интересно когда начинаешь осваивать что-то новое и все выглядит
-                так необычно.
+                Такие вопросы возникали внутри меня. Но надо просто взять себя в
+                руки и начинать.
               </p>
             </div>
             <div class="card__buttons">
@@ -184,7 +185,7 @@
             <div class="card__container">
               <img
                 class="card__img card__img-filter-hue-rotate"
-                src="./images/Lh9usa435IMJ9bZ6.jpg"
+                src="./images/benjamin-davies-mqN-EV9rNlY-unsplash.jpg"
                 loading="lazy"
                 alt=""
               />
@@ -197,8 +198,8 @@
                 Или вы, наоборот, могли вдохновиться успехами и поверить в себя.
               </p>
               <p class="card__text">
-                Свободно выдохнул после этого умопомрачительного заголовка на
-                первом проекте.
+                Приятное чувство, когда видишь, что проект принят. Успех
+                мотивирует двигаться вперед.
               </p>
             </div>
             <div class="card__buttons">
@@ -247,7 +248,7 @@
             <div class="card__container">
               <img
                 class="card__img card__img-filter-blur"
-                src="./images/fashionable-confident-cat-wearin-asdw.jpg"
+                src="./images/jeremy-bishop-fcwZsjyqp0s-unsplash.jpg"
                 loading="lazy"
                 alt=""
               />
@@ -262,8 +263,8 @@
                 сделать идеально, старались просто сделать.
               </p>
               <p class="card__text">
-                Я гений, миллиардер, плейбой, филантроп. Чувствую себя увереннее
-                некуда.
+                Понимая, как много еще впереди, сколько еще предстоит сделать,
+                появляются разные чувства.
               </p>
             </div>
             <div class="card__buttons">
@@ -312,7 +313,7 @@
             <div class="card__container">
               <img
                 class="card__img card__img-filter-opacity"
-                src="./images/artworks-3NnJ4kCMbDNJmGPn-hh8Y5Q.jpg"
+                src="./images/neom-yg6v0KoiIcU-unsplash.jpg"
                 loading="lazy"
                 alt=""
               />
@@ -328,7 +329,8 @@
                 единомышленники, не правда ли?
               </p>
               <p class="card__text">
-                Очень хорошо и плавненько пролетел второй спринт.
+                На этом этапе я уже хорошо влился в процесс обучения.
+                Одногруппники и команда сопровождения - хорошие ребята.
               </p>
             </div>
             <div class="card__buttons">
@@ -377,7 +379,7 @@
             <div class="card__container">
               <img
                 class="card__img card__img-filter-saturate"
-                src="./images/studying-cat-with-glasses-is-loo.jpg"
+                src="./images/nasa-hubble-space-telescope-Yurr2CX1-5g-unsplash.jpg"
                 loading="lazy"
                 alt=""
               />
@@ -390,7 +392,8 @@
                 пришло время посмотреть на задачу под другим углом.
               </p>
               <p class="card__text">
-                Все было замечательно до момента встречи с макетом.
+                И обычно решение приходит к тебе глубокой ночью, ведь мы не
+                спим, а думаем как реализовать тот самый элементик из макета.
               </p>
             </div>
             <div class="card__buttons">
@@ -439,7 +442,7 @@
             <div class="card__container">
               <img
                 class="card__img card__img-filter-grayscale"
-                src="./images/scale_1200.jpg"
+                src="./images/chuttersnap-cGXdjyP6-NU-unsplash.jpg"
                 loading="lazy"
                 alt=""
               />
@@ -454,7 +457,9 @@
                 откуда вы её черпали.
               </p>
               <p class="card__text">
-                Комментарии излишни. Взгляните на картинку.
+                Важно расставлять приоритеты. Браться за одно, жертвовать
+                другим, откладывать несрочные дела, например: пожить жизнь. Это
+                все будет позже.
               </p>
             </div>
             <div class="card__buttons">
@@ -503,7 +508,7 @@
             <div class="card__container">
               <img
                 class="card__img card__img-multiple-filter"
-                src="./images/357507-blackangel_2560x1440.jpg"
+                src="./images/lysann-weber-NSqSneOFXYA-unsplash.jpg"
                 loading="lazy"
                 alt=""
               />
@@ -595,7 +600,7 @@
             type="button"
             onclick="window['dialog-id'].close()"
           >
-            ок
+            <span class="button__text">ок</span>
           </button>
         </dialog>
       </div>
