--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </head>
   <body class="page">
     <header class="header">
-      <h1 class="header__title">&lt;/HTML&gt;</h1>
-      <p class="header__text">закрывающий тег</p>
+      <a class="header__link">&lt;/HTML&gt;</a>
+      <h1 class="header__title">закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
@@ -58,7 +58,7 @@
                 class="card__img card__img-filter-brightness"
                 src="./images/peter-herrmann-4Hf98JYfURU-unsplash.jpg"
                 loading="lazy"
-                alt=""
+                alt="Небольшая каменная арка. В конце виднеется луч света"
               />
               <span class="card__label">&lt;/HTML&gt;</span>
             </div>
@@ -74,7 +74,7 @@
               </p>
             </div>
             <div class="card__buttons">
-              <button class="card__icon-button">
+              <button type="button" class="card__icon-button">
                 <svg
                   class="like-icon"
                   width="36"
@@ -107,7 +107,7 @@
                   />
                 </svg>
               </button>
-              <button class="card__like-button">
+              <button type="button" class="card__like-button button-effects">
                 <span class="button__text">Like</span>
               </button>
             </div>
@@ -121,7 +121,7 @@
                 class="card__img card__img-filter-contrast"
                 src="./images/neom-_5TOw0ED9Jk-unsplash.jpg"
                 loading="lazy"
-                alt=""
+                alt="Человек под водой в большом открытом пространстве"
               />
               <span class="card__label">&lt;/HTML&gt;</span>
             </div>
@@ -140,7 +140,7 @@
               </p>
             </div>
             <div class="card__buttons">
-              <button class="card__icon-button">
+              <button type="button" class="card__icon-button">
                 <svg
                   class="like-icon"
                   width="36"
@@ -173,7 +173,7 @@
                   />
                 </svg>
               </button>
-              <button class="card__like-button">
+              <button type="button" class="card__like-button button-effects">
                 <span class="button__text">Like</span>
               </button>
             </div>
@@ -187,7 +187,7 @@
                 class="card__img card__img-filter-hue-rotate"
                 src="./images/benjamin-davies-mqN-EV9rNlY-unsplash.jpg"
                 loading="lazy"
-                alt=""
+                alt="Кончик небольшой лодки. Лодка плывет по середине реки. По краям горы"
               />
               <span class="card__label">&lt;CSS&gt;</span>
             </div>
@@ -203,7 +203,7 @@
               </p>
             </div>
             <div class="card__buttons">
-              <button class="card__icon-button">
+              <button type="button" class="card__icon-button">
                 <svg
                   class="like-icon"
                   width="36"
@@ -236,7 +236,7 @@
                   />
                 </svg>
               </button>
-              <button class="card__like-button">
+              <button type="button" class="card__like-button button-effects">
                 <span class="button__text">Like</span>
               </button>
             </div>
@@ -250,7 +250,7 @@
                 class="card__img card__img-filter-blur"
                 src="./images/jeremy-bishop-fcwZsjyqp0s-unsplash.jpg"
                 loading="lazy"
-                alt=""
+                alt="Дорога. Вдалеке виднеются горы"
               />
               <span class="card__label">&lt;desigions&gt;</span>
             </div>
@@ -268,7 +268,7 @@
               </p>
             </div>
             <div class="card__buttons">
-              <button class="card__icon-button">
+              <button type="button" class="card__icon-button">
                 <svg
                   class="like-icon"
                   width="36"
@@ -301,7 +301,7 @@
                   />
                 </svg>
               </button>
-              <button class="card__like-button">
+              <button type="button" class="card__like-button button-effects">
                 <span class="button__text">Like</span>
               </button>
             </div>
@@ -315,7 +315,7 @@
                 class="card__img card__img-filter-opacity"
                 src="./images/neom-yg6v0KoiIcU-unsplash.jpg"
                 loading="lazy"
-                alt=""
+                alt="Человек идет по пещере. В руке держит фонарь"
               />
               <span class="card__label">care</span>
             </div>
@@ -334,7 +334,7 @@
               </p>
             </div>
             <div class="card__buttons">
-              <button class="card__icon-button">
+              <button type="button" class="card__icon-button">
                 <svg
                   class="like-icon"
                   width="36"
@@ -367,7 +367,7 @@
                   />
                 </svg>
               </button>
-              <button class="card__like-button">
+              <button type="button" class="card__like-button button-effects">
                 <span class="button__text">Like</span>
               </button>
             </div>
@@ -381,7 +381,7 @@
                 class="card__img card__img-filter-saturate"
                 src="./images/nasa-hubble-space-telescope-Yurr2CX1-5g-unsplash.jpg"
                 loading="lazy"
-                alt=""
+                alt="Небо со звездами в ночное время."
               />
               <span class="card__label">&lt;support&gt;</span>
             </div>
@@ -397,7 +397,7 @@
               </p>
             </div>
             <div class="card__buttons">
-              <button class="card__icon-button">
+              <button type="button" class="card__icon-button">
                 <svg
                   class="like-icon"
                   width="36"
@@ -430,7 +430,7 @@
                   />
                 </svg>
               </button>
-              <button class="card__like-button">
+              <button type="button" class="card__like-button button-effects">
                 <span class="button__text">Like</span>
               </button>
             </div>
@@ -444,7 +444,7 @@
                 class="card__img card__img-filter-grayscale"
                 src="./images/chuttersnap-cGXdjyP6-NU-unsplash.jpg"
                 loading="lazy"
-                alt=""
+                alt="Разбитая тарелка"
               />
               <span class="card__label">&lt;lifes-style: none;&gt;</span>
             </div>
@@ -463,7 +463,7 @@
               </p>
             </div>
             <div class="card__buttons">
-              <button class="card__icon-button">
+              <button type="button" class="card__icon-button">
                 <svg
                   class="like-icon"
                   width="36"
@@ -496,7 +496,7 @@
                   />
                 </svg>
               </button>
-              <button class="card__like-button">
+              <button type="button" class="card__like-button button-effects">
                 <span class="button__text">Like</span>
               </button>
             </div>
@@ -510,7 +510,7 @@
                 class="card__img card__img-multiple-filter"
                 src="./images/lysann-weber-NSqSneOFXYA-unsplash.jpg"
                 loading="lazy"
-                alt=""
+                alt="Пустыня. В далеке люди на верблюдах"
               />
               <label class="card__label">&lt;experience&gt;</label>
             </div>
@@ -531,7 +531,7 @@
               </p>
             </div>
             <div class="card__buttons">
-              <button class="card__icon-button">
+              <button type="button" class="card__icon-button">
                 <svg
                   class="like-icon"
                   width="36"
@@ -564,7 +564,7 @@
                   />
                 </svg>
               </button>
-              <button class="card__like-button">
+              <button type="button" class="card__like-button button-effects">
                 <span class="button__text">Like</span>
               </button>
             </div>
@@ -573,7 +573,7 @@
       </ul>
       <div class="save__button-container">
         <button
-          class="save__button"
+          class="save__button button-effects"
           type="button"
           onclick="window['dialog-id'].showModal()"
           aria-controls="dialog-id"
@@ -581,7 +581,7 @@
           <svg viewBox="0 0 39 39" width="39" height="39">
             <use href="svg/floppy.svg#floppy"></use>
           </svg>
-          <span class="button__text">Сохранить на память</span>
+          <span class="button__text">Сохранить на&nbsp;память</span>
         </button>
         <dialog class="save__dialog" id="dialog-id">
           <div class="dialog__container">
@@ -596,7 +596,7 @@
             <p class="dialog__text">Вставьте дискету, чтобы продолжить</p>
           </div>
           <button
-            class="dialog__close-button"
+            class="dialog__close-button button-effects"
             type="button"
             onclick="window['dialog-id'].close()"
           >
